# trumply65

./: .env  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: error_handing.rs  lib.rs
api/src/graphql/: schema.rs
api/src/graphql/mutation/: mod.rs  tcc_mutation.rs
api/src/graphql/query/: db_query.rs  mod.rs  tcc_query.rs
app/: README.md  components.json  package.json  vite.config.ts
app/src/api/: tcc.ts
app/src/lib/: index.ts  schema.ts
app/src/lib/api/: db.ts  tcc.ts  utils.ts
app/src/lib/components/: AppToaster.svelte  ExportBreathingLight.svelte  MenuCommand.svelte  ProgressBar.svelte  SettingsForm.svelte  SettingsInfo.svelte  SqlBlock.svelte
app/src/lib/components/ui/: ModelWatcher.svelte
app/src/lib/components/ui/command/: command-list.svelte
app/src/lib/stores/: db.ts  flags.ts  tcc.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/query/: +layout.ts  +page.svelte
common/: Cargo.toml
common/src/: lib.rs  utils.rs
common/src/models/: excel_helper.rs  mod.rs
common/src/models/input/: mod.rs
common/src/models/output/: mod.rs
db/: Cargo.toml
db/src/: lib.rs
entity/: Cargo.toml
entity/src/: connection_config.rs  lib.rs  prelude.rs
migration/src/: lib.rs  m20240723_000001_connection_config_table.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
