[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = {path ="../entity"}
common = {path ="../common"}

serde = { version = "1.0.204", features = ["derive"] }
oracle = "0.6.2"
async-graphql = "7.0.6"
xlsxwriter = "0.6.1"


[dependencies.sea-orm]
version = "0.12.15" # sea-orm version
features = [
    "debug-print",
    # "runtime-tokio-native-tls",
    "runtime-tokio-rustls",
    # "sqlx-postgres",
    # "sqlx-mysql",
    "sqlx-sqlite",
]


